# well-read

./: .readthedocs.yaml  README.md  pyproject.toml  well_read.py
app/api/routes/: routes.py
app/utils/: pipeline.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/physics/: string_theory.rst
